--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,6 +1,7 @@
 a {
     color: #337ab7;
     text-decoration: none;
+    cursor: pointer;
     &:hover {
         color: #23527c;
         text-decoration: underline;
