--- a/src/css/style.less
+++ b/src/css/style.less
@@ -8,22 +8,14 @@ a {
     }
 }
 
-.login {
-    margin-top: 40vh;
+// 有頁脚時，增加頁面的底邊距保證内容顯示效果
+.with-footer {
+    padding-bottom: 25px;
 }
 
-.menu-title {
-    text-decoration: none;
-    font-size: large;
-}
-
-.menu-item {
-    text-decoration: none;
-    font-size: revert;
-}
-
-.upload-tip {
-    font-size: 20px;
-    margin-top: 10px;
-    color: #777;
+.el-notification.right {
+    .el-notification__content {
+        line-height: 24px;
+        margin: 0;
+    }
 }
