--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,3 +1,13 @@
+// 回到顶部的滚动动画
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    margin: 0;
+    color: #606266;
+}
+
 a {
     color: #337ab7;
     text-decoration: none;
