--- a/src/css/style.less
+++ b/src/css/style.less
@@ -23,6 +23,16 @@ a {
     padding-bottom: 30px;
 }
 
+// 确认消息框样式
+.el-message-box {
+    .el-message-box__header {
+        padding: 0;
+    }
+    .el-message-box__errormsg {
+        min-height: 0;
+    }
+}
+
 .el-notification.right {
     .el-notification__content {
         line-height: 24px;
